// Vitest Snapshot v1

exports[`waitForExists > should allow to set custom error 1`] = `
[
  [
    [Function],
    {
      "interval": 5,
      "timeout": 1000,
      "timeoutMsg": "my custom error",
    },
  ],
]
`;

exports[`waitForExists > should use default waitFor options 1`] = `
[
  [
    [Function],
    {
      "interval": 5,
      "timeout": 1000,
      "timeoutMsg": "element (\\"undefined\\") still not existing after 1000ms",
    },
  ],
]
`;
